@@ -1,5 +1,10 @@
 2005-08-04  Don Porter  <dgp@users.sourceforge.net>
 
+	[kennykb_numerics_branch]
+	* generic/tclObj.c:	Rewrote Tcl_GetDoubleFromObj().
+
+2005-08-04  Don Porter  <dgp@users.sourceforge.net>
+
 	[kennykb_numerics_branch] Updated from HEAD
 
 	* generic/tclObj.c:	Rewrote Tcl_GetBooleanFromObj() and supporting
